force-app/main/default/objects/Bank__c/Bank__c.object-meta.xml
<CustomObject>
    <label>Bank</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Bank Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Banks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>