force-app/main/default/objects/Bank__c/fields/Acquired025__c.field-meta.xml
<CustomField>
    <fullName>Acquired025__c</fullName>
    <label>Acquired $0.25</label>
    <summarizedField>Drop__c.X025__c</summarizedField>
    <summaryForeignKey>Drop__c.Bank__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>