force-app/main/default/objects/Bank__c/fields/Acquired100__c.field-meta.xml
<CustomField>
    <fullName>Acquired100__c</fullName>
    <label>Acquired $100</label>
    <summarizedField>Drop__c.X100__c</summarizedField>
    <summaryForeignKey>Drop__c.Bank__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>