force-app/main/default/objects/Bank__c/fields/Acquired10__c.field-meta.xml
<CustomField>
    <fullName>Acquired10__c</fullName>
    <label>Acquired $10</label>
    <summarizedField>Drop__c.X10__c</summarizedField>
    <summaryForeignKey>Drop__c.Bank__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>