force-app/main/default/objects/Bank__c/fields/Starting025__c.field-meta.xml
<CustomField>
    <fullName>Starting025__c</fullName>
    <label>Starting $0.25</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>