force-app/main/default/objects/Bank__c/fields/Starting100__c.field-meta.xml
<CustomField>
    <fullName>Starting100__c</fullName>
    <label>Starting $100</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>