force-app/main/default/objects/Bank__c/fields/Starting10__c.field-meta.xml
<CustomField>
    <fullName>Starting10__c</fullName>
    <label>Starting $10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>