force-app/main/default/objects/Bank__c/fields/TotalCashonHand__c.field-meta.xml
<CustomField>
    <fullName>TotalCashonHand__c</fullName>
    <formula>X100Extended__c +
 X50Extended__c +
 X20Extended__c +
 X10Extended__c +
 X5Extended__c +
 X2Extended__c +
 X1Extended__c +
 X025Extended__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cash on Hand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>