force-app/main/default/objects/Bank__c/fields/TotalSales__c.field-meta.xml
<CustomField>
    <fullName>TotalSales__c</fullName>
    <formula>TotalCashonHand__c - TotalStartingCash__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>