force-app/main/default/objects/Bank__c/fields/TotalStartingCash__c.field-meta.xml
<CustomField>
    <fullName>TotalStartingCash__c</fullName>
    <formula>Starting100__c * 100 +
 Starting50__c * 50 +
 Starting20__c * 20 +
 Starting10__c * 10 +
 Starting5__c * 5 +
 Starting2__c * 2 +
 Starting1__c * 1 +
 Starting025__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Starting Cash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>