force-app/main/default/objects/Bank__c/fields/TotalStartingValue__c.field-meta.xml
<CustomField>
    <fullName>TotalStartingValue__c</fullName>
    <label>Total Starting Value</label>
    <summarizedField>BankDenomenation__c.StartingValue__c</summarizedField>
    <summaryForeignKey>BankDenomenation__c.Bank__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>