force-app/main/default/objects/Bank__c/fields/TotalValueonHand__c.field-meta.xml
<CustomField>
    <fullName>TotalValueonHand__c</fullName>
    <label>Total Value on Hand</label>
    <summarizedField>BankDenomenation__c.TotalValue__c</summarizedField>
    <summaryForeignKey>BankDenomenation__c.Bank__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>