force-app/main/default/objects/Bank__c/fields/X025Extended__c.field-meta.xml
<CustomField>
    <fullName>X025Extended__c</fullName>
    <formula>Starting025__c + Acquired025__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$0.25 Extended</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>