force-app/main/default/objects/Bank__c/fields/X100Extended__c.field-meta.xml
<CustomField>
    <fullName>X100Extended__c</fullName>
    <formula>X100onHand__c * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$100 Extended</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>