force-app/main/default/objects/Bank__c/fields/X100onHand__c.field-meta.xml
<CustomField>
    <fullName>X100onHand__c</fullName>
    <formula>Starting100__c + Acquired100__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$100 on Hand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>