force-app/main/default/objects/Bank__c/fields/X10Extended__c.field-meta.xml
<CustomField>
    <fullName>X10Extended__c</fullName>
    <formula>X10onHand__c * 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$10 Extended</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>