force-app/main/default/objects/Bank__c/fields/X10onHand__c.field-meta.xml
<CustomField>
    <fullName>X10onHand__c</fullName>
    <formula>Starting10__c + Acquired10__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$10 on Hand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>