force-app/main/default/objects/Bank__c/fields/X1onHand__c.field-meta.xml
<CustomField>
    <fullName>X1onHand__c</fullName>
    <formula>Starting1__c + Acquired1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$1 on Hand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>